--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,7 @@
     "jsdom": "^24.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.3"
   },
